[package]
name = "polonium"
version = "0.1.0"
edition = "2018"
description = "Polonium is Pushover API wrapper with attachment support in Rust 2018 edition"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
reqwest = { version = "0.11.4", default-features = false, features = ["multipart", "rustls"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["macros"] }

[dev-dependencies]
mockito = "0.30.0"
