[package]
name = "po2"
version = "0.1.0"
edition = "2018"
description = "Po2 is a command line application based on Pullover"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
pullover = { path = "../pullover" }
structopt = "0.3.22"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
